--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,5 +1,6 @@
 * {
    font-family: 'Roboto', sans-serif;
+   box-sizing: border-box;
 }
 
 .content {
@@ -15,10 +16,16 @@
 }
 
 .pokemons li {
+    display: flex;
+    flex-direction: column;
     margin: .5rem;
     padding: 2rem 1rem;
     background-color: #14a06f;
     color: white;
     border-radius: 1rem;
+}
+
+.pokemons li img {
+    max-width: 100%;
     height: 100px;
 }
