--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -15,17 +15,49 @@
     margin: 0;  
 }
 
-.pokemons li {
+.pokemon {
     display: flex;
     flex-direction: column;
     margin: .5rem;
-    padding: 2rem 1rem;
-    background-color: #14a06f;
-    color: white;
+    padding: 1rem;
+    background-color: #49d0b0;
     border-radius: 1rem;
 }
 
-.pokemons li img {
+.pokemon .number {
+    color: #074d11;
+    text-align: right;
+    font-size: .625rem;
+}
+
+.pokemon .name {
+    color: white;
+    margin-bottom: .25rem;
+}
+
+.pokemon .detail {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.pokemon .detail .types {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+}
+
+.pokemon .detail .types .type {
+    background-color: #5de0c5;
+    color: white;
+    padding: .25rem .5rem;
+    margin: .25rem 0;
+    font-size: .625rem;
+    border-radius: 1rem;
+}
+
+.pokemon .detail img {
     max-width: 100%;
-    height: 100px;
+    height: 70px;
 }
