--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,17 +1,17 @@
 * {
-   font-family: 'Roboto', sans-serif;
-   box-sizing: border-box;
+    font-family: 'Roboto', sans-serif;
+    box-sizing: border-box;
 }
 
 body {
-    background-color: #f4f6fa;
+    background-color: #f6f8fc;
 }
 
 .content {
     width: 100vw;
     height: 100vh;
     padding: 1rem;
-    background-color: white;
+    background-color: #fff;
 }
 
 @media screen and (min-width: 992px) {
